# lanedirt.._..AliasVault

./: .dockerignore  .env.example  .gitignore  ARCHITECTURE.md  CONTRIBUTING.md  README.md  SECURITY.md  SECURITY.txt  docker-compose.yml  funding.json  install.sh
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/actions/build-android-app/: action.yml
.github/actions/build-browser-extension/: action.yml
.github/actions/build-core-libraries/: action.yml
.github/actions/build-ios-app/: action.yml
.github/workflows/: android-ui-tests.yml  browser-extension-build.yml  docker-build.yml  dotnet-e2e-tests.yml  dotnet-integration-tests.yml  dotnet-unit-tests.yml  e2e-tests-android.yml  e2e-tests-browser-extension.yml  e2e-tests-ios.yml  e2e-tests-server.yml  e2e-tests.yml  ios-ui-tests.yml  mobile-app-build.yml  push-to-git-mirrors.yml  release.yml
apps/browser-extension/: .gitignore  README.md  package-lock.json  package.json  playwright.config.ts  vitest.config.ts  wxt.config.ts
apps/browser-extension/safari-xcode/: build-and-submit.sh  exportOptions.plist
apps/browser-extension/tests/: extension.spec.ts  fixtures.ts  global-setup.ts  global-teardown.ts
apps/mobile-app/: .gitignore  app.json  eslint.config.js  eslint.config.mjs  package-lock.json  package.json
apps/mobile-app/.maestro/: config.yaml
apps/mobile-app/android/: .editorconfig  .gitignore  build.gradle  build.sh  detekt.yml  gradle.properties
apps/mobile-app/app/: +not-found.tsx  _layout.tsx  index.tsx  initialize.tsx  login-settings.tsx  login.tsx  reinitialize.tsx  unlock.tsx  upgrade.tsx  vault-error.tsx
apps/mobile-app/components/: EmailCard.tsx  LoadingIndicator.tsx  OfflineBanner.tsx  ServerSyncIndicator.tsx
apps/mobile-app/constants/: Colors.ts  vault.ts
apps/mobile-app/context/: AppContext.tsx  AuthContext.tsx  ClipboardCountdownContext.tsx  DbContext.tsx  DialogContext.tsx  NavigationContext.tsx
apps/mobile-app/events/: DialogEventEmitter.ts  LogoutEventEmitter.ts  PasswordConfirmEmitter.ts
apps/mobile-app/hooks/: useAlertDialog.ts  useItemSort.ts  useLogout.ts  usePasswordConfirm.ts  useVaultMutate.ts  useVaultSync.ts
apps/mobile-app/i18n/: index.ts
apps/mobile-app/ios/: .gitignore  .swiftlint.yml  AliasVaultUITests.xctestplan  Podfile  build-and-submit.sh  exportOptions.plist
apps/mobile-app/services/: LocalPreferencesService.ts
apps/mobile-app/specs/: NativeVaultManager.ts
apps/mobile-app/utils/: ApiUrlUtility.ts  AppInfo.ts  AppUnlockUtility.ts  ClipboardUtility.ts  ConversionUtility.ts  EncryptionUtility.ts  EncryptionUtility.tsx  HapticsUtility.ts  PinUnlockService.ts  PostUnlockNavigation.ts  SqliteClient.ts  SqliteClient.tsx  SrpUtility.ts  SrpUtility.tsx  TotpUtility.ts  VaultMergeService.ts  VaultUnlockHelper.ts  WebApiService.ts  folderUtils.ts  itemFilters.ts
apps/server/: Dockerfile  entrypoint.sh  nginx-443.conf  nginx-80-443.conf
apps/server/AliasVault.Admin/: AliasVault.Admin.csproj  Dockerfile  Program.cs  StartupTasks.cs  appsettings.json  package-lock.json  package.json
apps/server/AliasVault.Api/: AliasVault.Api.csproj  Config.cs  Dockerfile  Program.cs  appsettings.json
apps/server/AliasVault.Client/: AliasVault.Client.csproj  Config.cs  Dockerfile  Program.cs  _Imports.razor  entrypoint.sh  nginx.conf  package-lock.json  package.json
core/: README.md  build-and-distribute.sh
core/models/: README.md  build.sh  package-lock.json
core/models/scripts/: generate-field-keys.cjs
core/rust/: .gitignore  Cargo.toml  README.md  build.sh
core/rust/.cargo/: config.toml
core/rust/src/: error.rs  ffi.rs  lib.rs  uniffi_api.rs  wasm.rs
core/rust/src/credential_matcher/: domain.rs  mod.rs  stop_words.rs  tests.rs
core/rust/src/merge/: mod.rs
core/rust/src/srp/: mod.rs
core/rust/src/vault_merge/: types.rs
core/rust/src/vault_pruner/: mod.rs
core/typescript/identity-generator/: build.sh  package-lock.json
core/typescript/password-generator/: build.sh  package-lock.json
core/vault/: build.sh  package-lock.json  package.json
core/vault/scripts/: generate-vault-sql.cjs
dockerfiles/: docker-compose.all-in-one.dev.yml  docker-compose.all-in-one.nas.yml  docker-compose.all-in-one.yml  docker-compose.dev.yml
dockerfiles/all-in-one/: Dockerfile  README.md
dockerfiles/all-in-one/config/: nginx-443.conf  nginx-80-443.conf
dockerfiles/all-in-one/scripts/: aliasvault.sh
docs/: 404.html  Gemfile  _config.production.yml  _config.yml  docker-compose.dev.yml  docker-compose.yml  index.md
docs/_includes/: head_custom.html
docs/_plugins/: 404_server.rb
docs/_sass/color_schemes/: aliasvault.scss
docs/_technical-architecture/: OFFLINE_MODE.md  SERVER_RPO_RECOVERY.md
docs/architecture/: index.md
docs/assets/: fido_metadata.json
docs/browser-extensions/safari/: build-from-source.md
docs/contributing/: identity-generator.md  index.md  ui-translations.md
docs/installation/: index.md
docs/installation/docker-compose/: index.md  troubleshooting.md
docs/installation/installer/: index.md  troubleshooting.md
docs/installation/manual/: index.md  troubleshooting.md
docs/installation/script/: index-bak.md  index.md  troubleshooting.md
docs/misc/: index.md  private-vs-public-email.md
docs/misc/dev/: add-new-language.md  browser-extensions.md  database-operations.md  index.md  linux-macos-development.md  translations.md  upgrade-ef-client-model.md  upgrade-ef-server-model.md  (+1 more)
scripts/: bump-version.sh  bump-versions.sh  extract-xc-result-screenshots.sh  generate-release-notes.sh  local-docker-build-push.sh  print-latest-changelogs.sh  review-versions.sh  start-aio-docker-image.sh  stop-aio-docker-image.sh
shared/: README.md  build-and-distribute.sh
shared/identity-generator/: build.sh  package-lock.json
shared/models/: MODEL_GENERATION.md  README.md  build.sh  package-lock.json
shared/password-generator/: build.sh  package-lock.json  tsup.config.ts
shared/rust-core/: build.sh
shared/vault-sql/: build.sh  package-lock.json  tsup.config.ts
(+2739 files in other folders)
